--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
     <title>Instagram</title>
 </head>
 <body>
-    
+    <div class="instagran-wapper">
+        <div class="instagram-phone">
+            <img src="./img/iant-celular.png" alt="celular">
+        </div>
+        <div class="isntagram-continue">
+            <div class="group">
+                <img src="./img/inst.png" alt="logo Instagram">
+                <div class="profile-photo">
+                    <img src="./img/photo-perfil" alt="photo-perfil">
+                </div>
+                <a href="#" class="instagram-login">continue como vinicius</a>
+                <a href="#" class="instagram-logaut">Remove conta</a>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
