--- a/index.html
+++ b/index.html
@@ -8,18 +8,36 @@
     <title>Instagram</title>
 </head>
 <body>
-    <div class="instagran-wapper">
+    <div class="instagram-wapper">
         <div class="instagram-phone">
-            <img src="./img/iant-celular.png" alt="celular">
+            <img src="./img/instagram-celular.png" alt="celular">
         </div>
-        <div class="isntagram-continue">
+        <div class="instagram-continue">
             <div class="group">
-                <img src="./img/inst.png" alt="logo Instagram">
+                <img src="./img/inst.svg" alt="logo-Instagram">
                 <div class="profile-photo">
                     <img src="./img/photo-perfil" alt="photo-perfil">
                 </div>
                 <a href="#" class="instagram-login">continue como vinicius</a>
-                <a href="#" class="instagram-logaut">Remove conta</a>
+                <a href="#" class="instagram-logout">Remove conta</a>
+            </div>
+            <div class="group">
+                <p class="not-account">Não é vinicius</p>
+                <p class="not-account">
+                    <span class="link-blue">Alterna Conta</span>
+                    ou 
+                    <span class="link-blue">Inscreva-se</span>
+                </p>
+                
+            </div>
+            <div class="get-the-app">
+                <p class="get-app">
+                    baixe o aplicativo
+                </p>
+                <div class="download">
+                    <a href="#" class="app-download"></a>
+                    <a href="#" class="app-download"></a>
+                </div>
             </div>
         </div>
     </div>
