--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div>
         <div class="instagram-continue">
             <div class="group">
-                <img src="./img/inst.svg" alt="logo-Instagram">
+                <img src="./img/instagram-logo.png" alt="logo-instagram">
                 <div class="profile-photo">
                     <img src="./img/photo-perfil" alt="photo-perfil">
                 </div>
